<?xml version="1.0"?>
<package format="3">
  <name>boundary_mapper</name>
  <version>0.0.1</version>
  <description>Package to process point clouds and detect workspace boundaries.</description>
  <maintainer email="vednarsekar@gmail.com">nits</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>vision_opencv</depend>
  <depend>opencv</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
