<?xml version="1.0"?>
<package format="3">
  <name>mavros_takeoff</name>
  <version>0.0.0</version>
  <description>ROS 2 node for MAVROS takeoff</description>
  <maintainer email="duttaamandip1194@gmail.com">Amandip</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>